# CustomJsonEncoder

./: LICENSE  README.md  pyproject.toml
pytest/: test_inline_encoder.py  test_oneline_encoder.py
src/cjenc/: __init__.py  custom_serializable.py  customizable_json_encoder.py  sample.py
src/custom_json_encoder/: __init__.py  custom_json_encoder.py  custom_serializable.py  sample.py
src/json/custom_json_encoder/: custom_json_encoder.py  custom_serializable.py
