[project]
name = "customizable-json-encoder"
dynamic = ["version"]
requires-python = ">= 3.8"
authors = [
  {name = "Shuta Yasue", email = "shuta.59074.orionsbelt@gmail.com"}
]
maintainers = [
  {name = "Shuta Yasue", email = "shuta.59074.orionsbelt@gmail.com"}
]
description = "Customizable JSON Encoder for python. module name is cjenc."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["custom", "json", "encoder", "YasueShuta"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.11"
]

[project.urls]
Repository = "https://github.com/YasueShuta/CustomJsonEncoder.git"
Issues = "https://github.com/YasueShuta/CustomJsonEncoder/issues"

[tool.setuptools.dynamic]
version = {attr = "cjenc.__version__"}